portfolio about info update

--- a/about.html
+++ b/about.html
@@ -102,19 +102,19 @@
 					<div class="ai-text">
 						<h4>Web Developer / Wordpress Developer / UI UX Engineer</h4>
 						<p>
-							I am a front-end engineer who has developed products for more than 50 clients.I have
-							developed Websites, Basic systems and System front-ends. I am passionate about building
-							excellent web-based appication front-ends and I am BIT under graduate from University of
-							Colombo school of computing.
+							I’m a front-end engineer with over 6 years of experience in the tech industry. Throughout my
+							career, I’ve delivered high-quality web products for more than 50 clients—ranging from
+							individual entrepreneurs to large-scale corporations.
 						</p>
 						<p>
-							Over 4 years of web development experience and 3+ years of industry experience, I have
-							worked for clients ranging from individuals and small businesses all the way to large
-							corporations. I have a serious passion for UI effects, animations and creating intuitive,
-							dynamic user experiences.
+							I specialize in developing modern websites, interactive system front-ends, and user-centric
+							web applications. As a BIT undergraduate from the University of Colombo School of Computing,
+							I’m deeply passionate about creating responsive, intuitive, and visually engaging user
+							interfaces with seamless animations and smooth interactions.
 						</p>
 						<p>
-							Feel free to take a look at my latest projects on the <a href="portfolio.html">portfolio
+							I’ve developed over 100 projects for clients around the world. You can check out a few of my
+							featured and recent works on the <a href="portfolio.html">portfolio
 								page.</a></p>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 				<div class="col-lg-9">
 					<div class="ai-text">
 						<h4>- University of Colombo School Of Computing</h4>
-						<p>Bachalore Of Information Technology ( Final Year / GPA: 3.01 )</p>
+						<p>Information Technology Higher Diploma in IT</p>
 
 						<h4>- Vidyaraja National School</h4>
 						<p> GCE O/L (A7,B1,C1) </p>
@@ -139,7 +139,7 @@
 			<!-- ==== employement history ==== -->
 			<div class="row about-item emp-history">
 				<div class="col-lg-3">
-					<h2>Employment History <span class="exp-sml">(3+ Years)</span></h2>
+					<h2>Employment History <span class="exp-sml">(6+ Years)</span></h2>
 				</div>
 				<div class="col-lg-9">
 
@@ -147,7 +147,7 @@
 						<h4>- Idea Hub</h4>
 						<p>
 							<span>Senior Front-End Developer</span> <br>
-							 2022-April To Present
+							2022-April To Present
 						</p>
 					</div>
 
@@ -155,7 +155,7 @@
 						<h4>- Ogilvy Digital</h4>
 						<p>
 							<span>Web Developer</span> <br>
-							 2021-Feb To 2022-April
+							2021-Feb To 2022-April
 						</p>
 					</div>
 
@@ -163,7 +163,7 @@
 						<h4>- Dream Squad Private Limited</h4>
 						<p>
 							<span>Front-end Engineer</span> <br>
-							 2020-Feb To 2021-Feb
+							2020-Feb To 2021-Feb
 						</p>
 					</div>
 
@@ -171,7 +171,7 @@
 						<h4>- Web Lankan Private Limited</h4>
 						<p>
 							<span>UI/UX Engineer</span> <br>
-							 2019-June To 2020-Feb
+							2019-June To 2020-Feb
 						</p>
 					</div>
 
@@ -179,7 +179,7 @@
 						<h4>- Ozone Desk Private Limited</h4>
 						<p>
 							<span>Trainee Web Developer</span> <br>
-							 2018-Dec To 2019-May
+							2018-Dec To 2019-May
 						</p>
 					</div>
 
@@ -228,7 +228,7 @@
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
-								<i class="far fa-star"></i>
+								<i class="fas fa-star"></i>
 								<i class="far fa-star"></i>
 							</p>
 						</div>
@@ -393,16 +393,17 @@
 				</div>
 				<div class="col-lg-9">
 					<div class="ai-text">
-						<p>- Phone : <a href="tel:+94756095890">+9475 609 5890</a> / <a href="tel:+94741251080">+9474 125 1080</a> </p>
+						<p>- Phone :  <a href="tel:+94741251080">+9474
+								125 1080</a> </p>
 						<p>- Email : <a href="mailto:priyan1995darshana@gmail.com">priyan1995darshana@gmail.com</a> </p>
 						<p>- Social :
 							<a href="https://www.linkedin.com/in/priyan-darshana-487a571b1/" target="_blank">
 								<i class="fab fa-linkedin"></i>
 							</a>
-							<a href="https://www.facebook.com/priyan.darshana.1/" target="_blank">
+							<!-- <a href="https://www.facebook.com/priyan.darshana.1/" target="_blank">
 								<i class="fab fa-facebook-square"></i>
-							</a>
-							<a href="https://wa.me/+94756095890" target="_blank">
+							</a> -->
+							<a href="https://wa.me/+941251080" target="_blank">
 								<i class="fab fa-whatsapp-square"></i>
 							</a>
 						</p>
