projects update with json

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,366 +77,14 @@
 
 	<!-- Gallery section -->
 	<section class="gallery-section">
-		<div class="row gallery-gird">
-
-	
-			
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://gsffish.com/" target="_blank">
-					<img src="img/projects/29.jpg" alt="">
-					<div class="gi-text">
-						<h4>Global Sea Foods</h4>
-						<p>Wordpress</p>
-						<!-- <p class="pd-company-credit">By BflyDigital</p> -->
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://gracelandteafactory.com/" target="_blank">
-					<img src="img/projects/17.jpg" alt="">
-					<div class="gi-text">
-						<h4>Graceland Tea Factory</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By BflyDigital</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://kuwaitfarmersmarket.com/" target="_blank">
-					<img src="img/projects/kfm.jpg" alt="">
-					<div class="gi-text">
-						<h4>Kuwait Farmers Market</h4>
-						<p>Wordpress</p>						
-					</div>
-				</a>
-			</div>
+		<div class="row gallery-gird" id="projects-container">
 
 
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="http://rooleo.com/" target="_blank">
-					<img src="img/projects/28.jpg" alt="">
-					<div class="gi-text">
-						<h4>Roo Leo</h4>
-						<p>Wordpress</p>
-						<!-- <p class="pd-company-credit">By BflyDigital</p> -->
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://ilovecoco.co/" target="_blank">
-					<img src="img/projects/18.jpg" alt="">
-					<div class="gi-text">
-						<h4>I love Coco</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Lizard Advertising</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://epsicontraffic.com.au/" target="_blank">
-					<img src="img/projects/1.jpg" alt="">
-					<div class="gi-text">
-						<h4>Epsicon Traffic Management</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://www.guardianacuity.com/" target="_blank">
-					<img src="img/projects/30.jpg" alt="">
-					<div class="gi-text">
-						<h4>Guardian Acuity</h4>
-						<p>UI / Front-End</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
-		
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://sunquickrecipesrilanka.com/" target="_blank">
-					<img src="img/projects/31.jpg" alt="">
-					<div class="gi-text">
-						<h4>Sunquick Recipe</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
-
-			
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://priyan.ogilvydigital.tech/AOY/" target="_blank">
-					<img src="img/projects/32.jpg" alt="">
-					<div class="gi-text">
-						<h4>AOY</h4>
-						<p>UI / Front-End</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://spiralation.com/" target="_blank">
-					<img src="img/projects/19.jpg" alt="">
-					<div class="gi-text">
-						<h4>Spiralation</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://ferentino.com/" target="_blank">
-					<img src="img/projects/26.jpg" alt="">
-					<div class="gi-text">
-						<h4>Ferentino</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://priyan.ogilvydigital.tech/lanwa/" target="_blank">
-					<img src="img/projects/27.jpg" alt="">
-					<div class="gi-text">
-						<h4>Lanwa</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Ogilvy Digital</p>
-					</div>
-				</a>
-			</div>
 
 
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://bhagyahettiarachchi.com/" target="_blank">
-					<img src="img/projects/20.jpg" alt="">
-					<div class="gi-text">
-						<h4>Bhagya Hettiarachchi</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="https://priyan1995.github.io/js-parallax/" target="_blank">
-					<img src="img/projects/25.jpg" alt="">
-					<div class="gi-text">
-						<h4>Practise Task</h4>
-						<p>HTML/CSS/JS</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://aimun.net/" target="_blank">
-					<img src="img/projects/21.jpg" alt="">
-					<div class="gi-text">
-						<h4>AIMUN</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Orpheus</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://boroughmarkets.com.au/" target="_blank">
-					<img src="img/projects/22.jpg" alt="">
-					<div class="gi-text">
-						<h4>Borough Market</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Dream Squad</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://hyperspacehub.com/" target="_blank">
-					<img src="img/projects/23.jpg" alt="">
-					<div class="gi-text">
-						<h4>Hyperspace</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Dream Squad</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="https://madhalankatours.com/" target="_blank">
-					<img src="img/projects/2.jpg" alt="">
-					<div class="gi-text">
-						<h4>MadhaLanka Tours</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://bflydigital.com/" target="_blank">
-					<img src="img/projects/3.jpg" alt="">
-					<div class="gi-text">
-						<h4>BflyDigital</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://www.sanatiospa.lk/" target="_blank">
-					<img src="img/projects/4.jpg" alt="">
-					<div class="gi-text">
-						<h4>Sanatio Spa</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Idea Hub</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://wrmarcdesigns.com/" target="_blank">
-					<img src="img/projects/5.jpg" alt="">
-					<div class="gi-text">
-						<h4>WRM Architechture</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="http://kodafi.com/dev/" target="_blank">
-					<img src="img/projects/6.jpg" alt="">
-					<div class="gi-text">
-						<h4>Ko-Da-Fi</h4>
-						<p>HTML</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://lankanewsweek.com/" target="_blank">
-					<img src="img/projects/7.jpg" alt="">
-					<div class="gi-text">
-						<h4>Lanka Newsweek</h4>
-						<p>PHP</p>
-						<p class="pd-company-credit">By Ozonedesk</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="https://www.creationsmaster.com/" target="_blank">
-					<img src="img/projects/8.jpg" alt="">
-					<div class="gi-text">
-						<h4>Creation Master Builders</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="https://hyperjet.lk/" target="_blank">
-					<img src="img/projects/24.jpg" alt="">
-					<div class="gi-text">
-						<h4>Hyperjet</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
 
 
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://www.camlolanka.com/" target="_blank">
-					<img src="img/projects/11.jpg" alt="">
-					<div class="gi-text">
-						<h4>Camlo Lanka Website</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
 
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="http://www.tsaragreentea.com/" target="_blank">
-					<img src="img/projects/13.jpg" alt="">
-					<div class="gi-text">
-						<h4>Tsara Website</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://www.nsbm.ac.lk/" target="_blank">
-					<img src="img/projects/16.jpg" alt="">
-					<div class="gi-text">
-						<h4>NSBM - Responsive/few pages developed</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="http://www.nestacademy.lk/" target="_blank">
-					<img src="img/projects/9.jpg" alt="">
-					<div class="gi-text">
-						<h4>Nest Academy Website</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://www.cocofresh.lk/" target="_blank">
-					<img src="img/projects/10.jpg" alt="">
-					<div class="gi-text">
-						<h4>Coco Fresh Website</h4>
-						<p>Wordpress</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="https://www.ownetutor.lk/" target="_blank">
-					<img src="img/projects/12.jpg" alt="">
-					<div class="gi-text">
-						<h4>Own E-Tutor</h4>
-						<p>HTML/Css</p>
-						<p class="pd-company-credit">By Web lankan</p>
-					</div>
-				</a>
-			</div>
-
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://piyawardenaassociates.com/esessecretaries.lk" target="_blank">
-					<img src="img/projects/15.jpg" alt="">
-					<div class="gi-text">
-						<h4>ESES SECRETARIES</h4>
-						<p>HTML/CSS</p>
-						<p class="pd-company-credit">By bflydigital</p>
-					</div>
-				</a>
-			</div>
-
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item " href="http://bflydigital.com/ISF/" target="_blank">
-					<img src="img/projects/14.jpg" alt="">
-					<div class="gi-text">
-						<h4>ISF Website</h4>
-						<p>HTML / CSS</p>
-						<p class="pd-company-credit">By BflyDigital</p>
-					</div>
-				</a>
-			</div>
-		</div>
 		<!-- <div class="text-center pt-5">
 			<button class="site-btn">Load More</button>
 		</div> -->
@@ -467,6 +115,9 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/fresco.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/portfolio.js"></script>
+
+	
 
 </body>
 
