--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,6 @@
 	<section class="gallery-section">
 		<div class="row gallery-gird" id="projects-container">
 
-
-
-
-
-
-
 		<!-- <div class="text-center pt-5">
 			<button class="site-btn">Load More</button>
 		</div> -->
@@ -94,7 +88,7 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<!-- <a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a> -->
 			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
