removed social link

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="">Facebook</a>
 				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
