--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="">Facebook</a>
 				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
@@ -129,7 +129,7 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<a target="_blank" href="">Facebook</a>
 			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
