--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 				<div class="col-lg-9">
 					<div class="ai-text">
 						<h4>- University of Colombo School Of Computing</h4>
-						<p>Information Technology Higher Diploma in IT</p>
+						<p>Bachelor of Information Technology</p>
 
 						<h4>- Vidyaraja National School</h4>
 						<p> GCE O/L (A7,B1,C1) </p>
