--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 				<div class="row pd-just-centered">
 					<div class="col-lg-8">
 						<h2>Priyan Darshana</h2>
-						<p>Web Developer / Wordpress Developer / UI UX Engineer</p>
+						<p>Front-End Developer | Web Developer | Wordpress Developer | UI UX Engineer</p>
 					</div>
 					<div class="col-lg-4 pd-prof-img-sec">
 						<img src="img/priyan-prof-3.jpg">
