--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,15 @@
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
+	<!-- Particles.js -->
+	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
 </head>
 
 <body>
+	<!-- Particles Background -->
+	<div id="particles-js"></div>
+
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -106,8 +112,9 @@
 	<script src="js/fresco.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/portfolio.js"></script>
+	<script src="js/particles-init.js"></script>
 
-	
+
 
 </body>
 
