--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	 <!-- ========font awesome ====== -->
-	 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+	<!-- ========font awesome ====== -->
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+	<!-- Particles.js -->
+	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 </head>
 
 <body>
+	<!-- Particles Background -->
+	<div id="particles-js"></div>
+
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -87,7 +94,8 @@
 						<i class="far fa-star"></i>
 					</div>
 					<h2>UI UX Engineer</h2>
-					<p>Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the front-end development and should Familiarize with UI principles.</p>
+					<p>Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the
+						front-end development and should Familiarize with UI principles.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-1.png"></div>
@@ -102,7 +110,8 @@
 						<i class="far fa-star"></i>
 					</div>
 					<h2>Wordpress Developer</h2>
-					<p>A WordPress developer is a professional who works with the infrastructure of the Wordpress platform; Also theme and plugin development under Wordpress platform.</p>
+					<p>A WordPress developer is a professional who works with the infrastructure of the Wordpress
+						platform; Also theme and plugin development under Wordpress platform.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-2.png"></div>
@@ -117,7 +126,8 @@
 						<i class="far fa-star"></i>
 					</div>
 					<h2>React Developer</h2>
-					<p>Delivering a complete and functioning front end application. Ensuring the high performance of said application across all platforms.</p>
+					<p>Delivering a complete and functioning front end application. Ensuring the high performance of
+						said application across all platforms.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-3.png"></div>
@@ -149,6 +159,7 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/particles-init.js"></script>
 
 </body>
 
