--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
-						<i class="far fa-star"></i>
+						<i class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
 					<h2>React Developer</h2>
