--- a/index.html
+++ b/index.html
@@ -98,7 +98,281 @@
 						front-end development and should Familiarize with UI principles.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
-				<div class="hi-bg set-bg" data-setbg="img/slider-1.png"></div>
+				<div class="hi-bg">
+					<svg class="html-code-svg" viewBox="0 0 600 400" preserveAspectRatio="xMidYMid meet"
+						xmlns="http://www.w3.org/2000/svg">
+						<defs>
+							<style>
+								@keyframes typing1 {
+									0% {
+										opacity: 0;
+									}
+
+									5% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing2 {
+
+									0%,
+									10% {
+										opacity: 0;
+									}
+
+									15% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing3 {
+
+									0%,
+									20% {
+										opacity: 0;
+									}
+
+									25% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing4 {
+
+									0%,
+									30% {
+										opacity: 0;
+									}
+
+									35% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing5 {
+
+									0%,
+									40% {
+										opacity: 0;
+									}
+
+									45% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing6 {
+
+									0%,
+									50% {
+										opacity: 0;
+									}
+
+									55% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing7 {
+
+									0%,
+									60% {
+										opacity: 0;
+									}
+
+									65% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing8 {
+
+									0%,
+									70% {
+										opacity: 0;
+									}
+
+									75% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes typing9 {
+
+									0%,
+									80% {
+										opacity: 0;
+									}
+
+									85% {
+										opacity: 1;
+									}
+
+									100% {
+										opacity: 1;
+									}
+								}
+
+								@keyframes blink {
+
+									0%,
+									100% {
+										opacity: 1;
+									}
+
+									50% {
+										opacity: 0;
+									}
+								}
+
+								.cursor {
+									animation: blink 1s infinite;
+								}
+
+								.line1 {
+									animation: typing1 6s ease-out infinite;
+								}
+
+								.line2 {
+									animation: typing2 6s ease-out infinite;
+								}
+
+								.line3 {
+									animation: typing3 6s ease-out infinite;
+								}
+
+								.line4 {
+									animation: typing4 6s ease-out infinite;
+								}
+
+								.line5 {
+									animation: typing5 6s ease-out infinite;
+								}
+
+								.line6 {
+									animation: typing6 6s ease-out infinite;
+								}
+
+								.line7 {
+									animation: typing7 6s ease-out infinite;
+								}
+
+								.line8 {
+									animation: typing8 6s ease-out infinite;
+								}
+
+								.line9 {
+									animation: typing9 6s ease-out infinite;
+								}
+							</style>
+						</defs>
+
+						<!-- Code Editor Box -->
+						<rect x="20" y="20" width="560" height="360" rx="8" fill="#252526" stroke="#3e3e42"
+							stroke-width="2" />
+
+						<!-- Top Bar -->
+						<rect x="20" y="20" width="560" height="35" rx="8" fill="#2d2d30" />
+						<circle cx="40" cy="37.5" r="6" fill="#ff5f56" />
+						<circle cx="60" cy="37.5" r="6" fill="#ffbd2e" />
+						<circle cx="80" cy="37.5" r="6" fill="#27c93f" />
+
+						<!-- File Name -->
+						<text x="110" y="42" font-family="monospace" font-size="14" fill="#cccccc">index.html</text>
+
+						<!-- Code Lines with Typing Animation -->
+						<g font-family="'Courier New', monospace" font-size="16">
+							<!-- Line 1 -->
+							<text class="line1" x="40" y="85" fill="#808080">&lt;!DOCTYPE html&gt;</text>
+
+							<!-- Line 2 -->
+							<text class="line2" x="40" y="110" fill="#569cd6">&lt;html</text>
+							<text class="line2" x="95" y="110" fill="#9cdcfe"> lang</text>
+							<text class="line2" x="140" y="110" fill="#ffffff">=</text>
+							<text class="line2" x="155" y="110" fill="#ce9178">"en"</text>
+							<text class="line2" x="195" y="110" fill="#569cd6">&gt;</text>
+
+							<!-- Line 3 -->
+							<text class="line3" x="60" y="135" fill="#569cd6">&lt;head&gt;</text>
+
+							<!-- Line 4 -->
+							<text class="line4" x="80" y="160" fill="#569cd6">&lt;meta</text>
+							<text class="line4" x="140" y="160" fill="#9cdcfe"> charset</text>
+							<text class="line4" x="215" y="160" fill="#ffffff">=</text>
+							<text class="line4" x="230" y="160" fill="#ce9178">"UTF-8"</text>
+							<text class="line4" x="300" y="160" fill="#569cd6">&gt;</text>
+
+							<!-- Line 5 -->
+							<text class="line5" x="80" y="185" fill="#569cd6">&lt;title&gt;</text>
+							<text class="line5" x="150" y="185" fill="#ffffff">Semantic HTML</text>
+							<text class="line5" x="305" y="185" fill="#569cd6">&lt;/title&gt;</text>
+
+							<!-- Line 6 -->
+							<text class="line6" x="60" y="210" fill="#569cd6">&lt;/head&gt;</text>
+
+							<!-- Line 7 -->
+							<text class="line7" x="60" y="235" fill="#569cd6">&lt;body&gt;</text>
+
+							<!-- Line 8 -->
+							<text class="line8" x="80" y="260" fill="#569cd6">&lt;header&gt;</text>
+							<text class="line8" x="170" y="260" fill="#4ec9b0">&lt;h1&gt;</text>
+							<text class="line8" x="225" y="260" fill="#ffffff">Welcome</text>
+							<text class="line8" x="320" y="260" fill="#4ec9b0">&lt;/h1&gt;</text>
+							<text class="line8" x="385" y="260" fill="#569cd6">&lt;/header&gt;</text>
+
+							<!-- Line 9 -->
+							<text class="line9" x="60" y="285" fill="#569cd6">&lt;/body&gt;</text>
+
+							<!-- Blinking Cursor -->
+							<text class="cursor line9" x="145" y="285" fill="#ffffff">|</text>
+						</g>
+
+						<!-- Line Numbers -->
+						<g font-family="monospace" font-size="14" fill="#858585">
+							<text class="line1" x="25" y="85">1</text>
+							<text class="line2" x="25" y="110">2</text>
+							<text class="line3" x="25" y="135">3</text>
+							<text class="line4" x="25" y="160">4</text>
+							<text class="line5" x="25" y="185">5</text>
+							<text class="line6" x="25" y="210">6</text>
+							<text class="line7" x="25" y="235">7</text>
+							<text class="line8" x="25" y="260">8</text>
+							<text class="line9" x="25" y="285">9</text>
+						</g>
+					</svg>
+				</div>
 			</div>
 			<div class="hero-item">
 				<div class="hero-text">
