three js animation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	<!-- Particles.js -->
 	<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
+	<!-- Three.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
 </head>
 
 <body>
@@ -116,7 +119,10 @@
 						platform; Also theme and plugin development under Wordpress platform.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
-				<div class="hi-bg set-bg" data-setbg="img/slider-2.png"></div>
+				<div class="hi-bg">
+					<!-- <canvas id="laptop-canvas"
+						style="display: block !important; width: 600px; height: 400px; max-width: 90%; max-height: 90%; background: transparent; opacity: 1; visibility: visible;"></canvas> -->
+				</div>
 			</div>
 			<div class="hero-item">
 				<div class="hero-text">
@@ -164,6 +170,7 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/particles-init.js"></script>
+	<script src="js/laptop-animation.js"></script>
 
 </body>
 
