--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
+	<!-- Hero Override (highest priority) -->
+	<link rel="stylesheet" href="css/hero-override.css" />
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -88,7 +90,7 @@
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item">
-				<div class="hero-text">
+				<div class="hero-text no-animation typing-effect">
 					<div class="ht-cata">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -96,17 +98,21 @@
 						<i class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<h2>UI UX Engineer</h2>
-					<p>Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the
-						front-end development and should Familiarize with UI principles.</p>
-					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<h2 data-typing-text="UI UX Engineer"></h2>
+					<p
+						data-typing-text="Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the front-end development and should Familiarize with UI principles.">
+					</p>
+					<a href="about.html" class="ht-btn">
+						See More
+						<i class="arrow_right"></i>
+					</a>
 				</div>
 				<div class="hi-bg">
 					<object data="img/html-code-editor.svg" type="image/svg+xml" class="html-code-svg"></object>
 				</div>
 			</div>
 			<div class="hero-item">
-				<div class="hero-text">
+				<div class="hero-text no-animation typing-effect">
 					<div class="ht-cata">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -114,9 +120,10 @@
 						<i class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<h2>Wordpress Developer</h2>
-					<p>A WordPress developer is a professional who works with the infrastructure of the Wordpress
-						platform; Also theme and plugin development under Wordpress platform.</p>
+					<h2 data-typing-text="Wordpress Developer"></h2>
+					<p
+						data-typing-text="A WordPress developer is a professional who works with the infrastructure of the Wordpress platform; Also theme and plugin development under Wordpress platform.">
+					</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg">
@@ -125,7 +132,7 @@
 				</div>
 			</div>
 			<div class="hero-item">
-				<div class="hero-text">
+				<div class="hero-text no-animation typing-effect">
 					<div class="ht-cata">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -133,9 +140,10 @@
 						<i class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<h2>React Developer</h2>
-					<p>Delivering a complete and functioning front end application. Ensuring the high performance of
-						said application across all platforms.</p>
+					<h2 data-typing-text="React Developer"></h2>
+					<p
+						data-typing-text="Delivering a complete and functioning front end application. Ensuring the high performance of said application across all platforms.">
+					</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg">
@@ -168,9 +176,11 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/masonry.pkgd.min.js"></script>
+	<script src="js/svg-animation-restart.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/particles-init.js"></script>
 	<script src="js/laptop-animation.js"></script>
+	<script src="js/typing-effect.js"></script>
 
 </body>
 
