--- a/about.html
+++ b/about.html
@@ -52,7 +52,6 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a target="_blank" href="">Facebook</a>
 				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
@@ -152,7 +151,7 @@
 			<!-- ==== employement history ==== -->
 			<div class="row about-item emp-history">
 				<div class="col-lg-3">
-					<h2>Employment History <span class="exp-sml">(6+ Years)</span></h2>
+					<h2>Employment History <span class="exp-sml">(7+ Years)</span></h2>
 				</div>
 				<div class="col-lg-9">
 
@@ -522,6 +521,13 @@
 						</div>
 					</div>
 
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>AI-assisted development (Cursor IDE)</h4>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
@@ -557,9 +563,6 @@
 							<a href="https://www.linkedin.com/in/priyan-darshana-487a571b1/" target="_blank">
 								<i class="fab fa-linkedin"></i>
 							</a>
-							<!-- <a href="https://www.facebook.com/priyan.darshana.1/" target="_blank">
-								<i class="fab fa-facebook-square"></i>
-							</a> -->
 							<a href="https://wa.me/+941251080" target="_blank">
 								<i class="fab fa-whatsapp-square"></i>
 							</a>
@@ -575,7 +578,6 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a target="_blank" href="">Facebook</a>
 			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
 			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
