--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
 	<!-- Offcanvas Menu Section -->
 	<div class="offcanvas-menu-wrapper">
 		<div class="menu-header">
-			<a href="./index.html" class="site-logo">
+			<!-- <a href="./index.html" class="site-logo">
 				<img src="img/logo.png" alt="">
-			</a>
+			</a> -->
 			<div class="menu-switch" id="menu-canvas-close">
 				<i class="icon_close"></i>
 			</div>
@@ -71,9 +71,9 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="./index.html" class="site-logo">
+		<!-- <a href="./index.html" class="site-logo">
 			<img src="img/logo.png" alt="">
-		</a>
+		</a> -->
 		<div class="menu-switch" id="menu-canvas-show">
 			<i class="icon_menu"></i>
 		</div>
