--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 					</a>
 				</div>
 				<div class="hi-bg">
-					<object data="img/html-code-editor.svg" type="image/svg+xml" class="html-code-svg"></object>
+					<object data-src="img/html-code-editor.svg" type="image/svg+xml"
+						class="html-code-svg hero-slide-svg"></object>
 				</div>
 			</div>
 			<div class="hero-item">
@@ -112,8 +113,8 @@
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg">
-					<!-- <canvas id="laptop-canvas"
-						style="display: block !important; width: 600px; height: 400px; max-width: 90%; max-height: 90%; background: transparent; opacity: 1; visibility: visible;"></canvas> -->
+					<object data-src="img/html-code-editor.svg" type="image/svg+xml"
+						class="html-code-svg hero-slide-svg"></object>
 				</div>
 			</div>
 			<div class="hero-item">
@@ -125,7 +126,8 @@
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg">
-					<object data="img/react-logo.svg" type="image/svg+xml" class="react-logo-svg"></object>
+					<object data-src="img/react-logo.svg" type="image/svg+xml"
+						class="react-logo-svg hero-slide-svg"></object>
 				</div>
 			</div>
 		</div>
