--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 
 	<!-- Page top section -->
 	<div class="page-top-section">
-		<div class="page-top-warp set-bg" data-setbg="img/page-abt-bg.jpg">
+		<div class="page-top-warp set-bg">
 			<div class="container">
 				<div class="row pd-just-centered">
 					<div class="col-lg-8">
