about page background added

--- a/about.html
+++ b/about.html
@@ -82,6 +82,10 @@
 		<div class="page-top-warp set-bg">
 			<div class="container">
 				<div class="row pd-just-centered">
+					<div class="page-top-decoration">
+						<object data="img/page-top-decoration.svg" type="image/svg+xml" class="page-top-decoration-svg"
+							aria-hidden="true"></object>
+					</div>
 					<div class="col-lg-8">
 						<h2>Priyan Darshana</h2>
 						<p>Front-End Developer | Web Developer | Wordpress Developer | UI UX Engineer</p>
