raindrop cursor event

--- a/about.html
+++ b/about.html
@@ -602,6 +602,8 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/particles-init.js"></script>
+	<script src="js/cursor-magnet.js"></script>
+	<script src="js/custom-cursor.js"></script>
 
 </body>
 
