--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
 	<script src="js/particles-init.js"></script>
 	<script src="js/laptop-animation.js"></script>
 	<script src="js/typing-effect.js"></script>
+	<script src="js/cursor-magnet.js"></script>
+	<script src="js/custom-cursor.js"></script>
 
 </body>
 
