--- a/portfolio.html
+++ b/portfolio.html
@@ -111,8 +111,8 @@
 	<script src="js/main.js"></script>
 	<script src="js/portfolio.js"></script>
 	<script src="js/particles-init.js"></script>
-
-
+	<script src="js/cursor-magnet.js"></script>
+	<script src="js/custom-cursor.js"></script>
 
 </body>
 
