new menu items added

--- a/about.html
+++ b/about.html
@@ -46,9 +46,12 @@
 			</div>
 		</div>
 		<ul class="main-menu">
-			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="about.html" class="active">About</a></li>
+			<li><a href="#employment-history">Employment History</a></li>
+			<li><a href="#skills">Skills</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
@@ -153,7 +156,7 @@
 				</div>
 			</div>
 			<!-- ==== employement history ==== -->
-			<div class="row about-item emp-history">
+			<div class="row about-item emp-history" id="employment-history">
 				<div class="col-lg-3">
 					<h2>Employment History <span class="exp-sml">(7+ Years)</span></h2>
 				</div>
@@ -251,7 +254,7 @@
 			</div>
 
 			<!-- ==== skills section ==== -->
-			<div class="row about-item pd-skills">
+			<div class="row about-item pd-skills" id="skills">
 				<div class="col-lg-3">
 					<h2>Skills</h2>
 				</div>
@@ -555,7 +558,7 @@
 			</div>
 
 			<!-- ==== Contact Details ==== -->
-			<div class="row about-item other-skills">
+			<div class="row about-item other-skills" id="contact">
 				<div class="col-lg-3">
 					<h2>Contact Details</h2>
 				</div>
