--- a/portfolio.html
+++ b/portfolio.html
@@ -49,9 +49,12 @@
 			</div>
 		</div>
 		<ul class="main-menu">
-			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html" class="active">Portfolio</a></li>
 			<li><a href="about.html">About</a></li>
+			<li><a href="about.html#employment-history">Employment History</a></li>
+			<li><a href="about.html#skills">Skills</a></li>
+			<li><a href="about.html#contact">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
